# bevy_ui_builder

./: .gitignore  Cargo.toml  README.md
assets/: Example.pxo
examples/: change_states.rs  main.rs  sample.rs  sample_without.rs  shapes_sample.rs  shapes_sample_without.rs  show_themes.rs  states_sample.rs  texture_button.rs  title_screen.rs
examples/simple_title_screen/: main.rs  menu.rs
src/: lib.rs  prelude.rs  test.rs  theme.rs
src/theme/: dimensions.rs  mod.rs  themes.rs
src/widgets/: base_button.rs  button.rs  checkbox.rs  column.rs  container.rs  dropdown.rs  label.rs  mod.rs  row.rs  text_button.rs  text_input.rs  text_label.rs
