[package]
name = "bevy_ui_builder"
version = "0.3.1-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
bevy-ui-navigation = { git = "https://github.com/rparrett/ui-navigation.git", branch = "bevy-0.13" }
dark-light = "1.0.0"
once_cell = "1.18.0"
indextree = "4.6.0"

[features]
examples = ["bevy/bevy_asset", "bevy/png"]

[dependencies.bevy]
version = "^0.13"
default-features = false
features = ["bevy_ui", "bevy_text", "bevy_winit", "default_font"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "^0.13"
default-features = false
features = ["x11", "wayland"]
