[package]
name = "bevy_ui_builder"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
bevy-ui-navigation = { git = "https://github.com/rparrett/bevy-alt-ui-navigation-lite.git", rev = "2b75b6980f3f1a894c597e8ba75ba01b87d802ab" }
dark-light = "1.0.0"
once_cell = "1.18.0"
indextree = "4.6.0"

[features]
examples = ["bevy/bevy_asset", "bevy/png"]

[dependencies.bevy]
version = "^0.13"
default-features = false
features = ["bevy_ui", "bevy_text", "bevy_winit", "default_font"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "^0.13"
default-features = false
features = ["x11", "wayland"]
