[package]
name = "bevy_ui_builder"
version = "0.4.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
bevy-alt-ui-navigation-lite = { git = "https://github.com/rparrett/bevy-alt-ui-navigation-lite.git", tag = "v0.2.0" }
dark-light = "1.0.0"
once_cell = "1.18.0"
indextree = "4.6.0"

[features]
examples = ["bevy/bevy_asset", "bevy/png"]

[dependencies.bevy]
version = "^0.14"
default-features = false
features = ["bevy_ui", "bevy_text", "bevy_winit", "default_font", "bevy_state"]

[target.'cfg(target_os = "linux")'.dependencies.bevy]
version = "^0.14"
default-features = false
features = ["x11", "wayland"]
